cluster/flux-addons/receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiver
  namespace: flux-system
  annotations:
    metallb.universe.tf/loadBalancerIPs: ${CONFIG_METALLB_FLUX_RECEIVER_ADDR}
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 9292
      protocol: TCP
      targetPort: 9292
