cluster/flux-addons/receiver/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks-from-outside
  namespace: flux-system
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: ${CONFIG_WEBHOOK_SPACE}
  podSelector:
    matchLabels:
      app: notification-controller
  policyTypes:
    - Ingress
